# drone_path_planning_python

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: prob_definitiion.yaml
launch/: dronesVisual.launch
msg/: planning_state.msg  rigid_body_dynamic_path.msg
resources/: ompl_app_config.cfg  planners_results.csv  planners_results_pandas.csv  robot.urdf
resources/collada/: custom_triangle_robot.dae  empty-scene.dae  env-scene-L.dae  env-scene-hole-narrow.dae  env-scene-hole.dae  env-scene-inclined.dae  env-scene-ltu-experiment-corridor-narrow-easy.dae  env-scene-ltu-experiment-corridor-narrow-narrow.dae  env-scene-ltu-experiment-corridor-narrow.dae  env-scene-ltu-experiment-corridor.dae  env-scene-ltu-experiment-hole-inclined-easy.dae  env-scene-ltu-experiment-hole-inclined.dae  env-scene-ltu-experiment-hole-wide.dae  env-scene-ltu-experiment-small-hole.dae  env-scene-ltu-experiment-tunnel.dae  env-scene-ltu-experiment-tunnel2.dae  env-scene-ltu-experiment.dae  env-scene-narrow.dae  env-scene.dae  robot-scene-triangle.dae  robot-scene.dae  untitled-scene.dae
resources/paths/: ltu_path-90deg_turns.txt  ltu_path_simple.txt  path.txt  path_V_shape.txt
resources/stl/: custom_V_robot.stl  env-scene-L.stl  (+20 more)
scripts/: RB_planning_sep_coll_check.py  crazyflie_controller.py  droneMarkerVis.py  drones_pols_generator.py  drones_pols_generator_realtime.py  drones_traj_generator.py  drones_vis.py  path_vis.py  planner_live.py  rigidBodyPath.py  sep_collision_checking.py  stl_creation.py  traj_executor_position_controller.py
src/: plt_3d_mesh.py
(+54 files in other folders)
