<?xml version="1.0"?>
<package>
  <name>3Dvisualization</name>
  <version>0.0.3</version>
  <description>3D visualization of drone</description>

  <maintainer email="mariosstamatopoulos1@gmail.com">Marios Stamatopoulos</maintainer>

  <license>MIT</license>

  <author email="mariosstamatopoulos1@gmail.com">Marios Stamatopoulos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversion</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
